# fSUM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  launcher.sh  launcher_Liguria.sh  launcher_Liguria_tri.sh  launcher_misclassification.sh  launcher_optimization.sh  main.cpp  parameters.run  plot.ods
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml
data/Genova_Harbor/: field.csv
data/Liguria_grid/: cr_mean_global.csv  field_global.csv  launcher_Liguria.sh
data/Liguria_grid/10_FARENZANO/: cr_mean.csv  cr_mean_m_sigma.csv  cr_mean_p_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/11_FSASSELLO/: cr_mean_m_sigma.csv  cr_mean_p_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/11_SASSELLO/: field.csv
data/Liguria_grid/12_BORMIDE/: field.csv
data/Liguria_grid/12_FBORMIDE/: cr_mean_m_sigma.csv  cr_mean_p_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/13_FSAVONESE/: mesh_grid_labels.csv
data/Liguria_grid/13_SAVONESE/: field_m_sigma.csv  field_p_sigma.csv
data/Liguria_grid/14_FIMPERIESE/: mesh_grid_labels.csv
data/Liguria_grid/14_IMPERIESE/: field.csv  field_m_sigma.csv  field_p_sigma.csv
data/Liguria_grid/1_5TERRE/: field_p_sigma.csv
data/Liguria_grid/1_F5TERRE/: cr_mean_m_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/2_FMAGRA/: cr_mean_m_sigma.csv  cr_mean_p_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/3_FPETRONIO/: cr_mean_m_sigma.csv  cr_mean_p_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/4_FPORTOFINO/: cr_mean_p_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/4_PORTOFINO/: field.csv  field_m_sigma.csv
data/Liguria_grid/5_ENTELLA/: field_p_sigma.csv
data/Liguria_grid/5_FENTELLA/: cr_mean.csv  cr_mean_m_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/6_AVETO/: field.csv  field_m_sigma.csv  field_p_sigma.csv
data/Liguria_grid/6_FAVETO/: mesh_grid_labels.csv
data/Liguria_grid/7_FPADANO/: cr_mean_m_sigma.csv  cr_mean_p_sigma.csv  mesh_grid_labels.csv
data/Liguria_grid/8_BISAGNO/: field_m_sigma.csv  field_p_sigma.csv
data/Liguria_grid/8_FBISAGNO/: mesh_grid_labels.csv
data/Liguria_grid/9_FPOLCEVERA/: mesh_grid_labels.csv
data/Liguria_grid/9_POLCEVERA/: field.csv  field_m_sigma.csv  field_p_sigma.csv
data/Liguria_grid/cr_F5TERRE/: cr_mean.csv
data/Liguria_grid/cr_FBISAGNO/: cr_mean.csv
data/Liguria_grid/cr_FMAGRA/: cr_mean.csv
data/Liguria_grid/cr_FPADANO/: cr_mean.csv
data/Liguria_grid/cr_FPETRONIO/: cr_mean.csv
data/Liguria_grid/cr_FSAVONESE/: cr_mean.csv
data/Liguria_tri/: cr_mean_global.csv  launcher_Liguria_tri.sh
data/Liguria_tri/10_FARENZANO/: cr_mean.csv  cr_mean_m_stdev.csv  cr_mean_p_sigma.csv
data/Liguria_tri/11_FSASSELLO/: cr_mean.csv  cr_mean_p_sigma.csv
data/Liguria_tri/cr_F5TERRE/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FARENZANO/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FAVETO/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FBISAGNO/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FBORMIDE/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FENTELLA/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FIMPERIESE/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FMAGRA/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FPADANO/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FPETRONIO/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FPOLCEVERA/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FPORTOFINO/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FSASSELLO/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/Liguria_tri/cr_FSAVONESE/: cr_mean.csv  cr_mean_p_stdev.csv  mesh_tri_labels.csv
data/cube_hex/: mesh_labels.csv  phi_mean.csv  phi_mean_m_stdev.csv
data/nisyros/: field.csv  field_norm.csv  field_norm_smooth.csv  mesh_labels.csv
data/porto/: NH3_mean.csv
data/sec_2D_4000_tri_230k/: sec_rot_labels.csv
data/sec_2D_4000_tri_230k/_normspace/: phi.json  sgs_0.csv  sgs_1.csv  sgs_2.csv  sgs_3.csv  sgs_4.csv  sgs_5.csv  sgs_6.csv  sgs_7.csv  sgs_8.csv  sgs_9.csv
data/sec_2D_4000_tri_230k/_normspace/_stats/: phi_Q1.csv  phi_Q3.csv  phi_QCD.csv  phi_mean.csv  phi_mean_m_stdev.csv  phi_mean_p_stdev.csv  phi_median.csv  phi_stdev.csv  phi_var.csv
data/sec_2D_4000_tri_230k/_varspace/: phi.json  sgs_0.csv  sgs_1.csv  sgs_2.csv  sgs_3.csv  sgs_4.csv  sgs_5.csv  sgs_6.csv  sgs_7.csv  sgs_8.csv  sgs_9.csv
data/sec_2D_4000_tri_230k/_varspace/_stats/: phi_Q1.csv  phi_Q3.csv  phi_QCD.csv  phi_mean.csv  phi_mean_m_stdev.csv  (+4 more)
data/sec_2D_4000_tri_23k/: sec_rot_labels.csv  sec_rot_out.mtu  sec_rot_out_labels.csv
data/sec_2D_4000_tri_23k/_normspace/: phi.json  sgs_0.csv  sgs_1.csv  sgs_2.csv  sgs_3.csv  sgs_4.csv  sgs_5.csv  sgs_6.csv  sgs_7.csv  sgs_8.csv  sgs_9.csv
data/sec_2D_4000_tri_23k/_varspace/: phi.json  sgs_0.csv  sgs_1.csv  sgs_2.csv  sgs_3.csv  sgs_4.csv  sgs_5.csv  sgs_6.csv  sgs_7.csv  sgs_8.csv  sgs_9.csv
data/sec_rot/: mean.csv
merge_regions/: CMakeLists.txt  main.cpp
merge_subdomains/: CMakeLists.txt  launcher1.sh  launcher2.sh  launcher_arenzano.sh  launcher_liguria.sh  main.cpp
misclassification/: CMakeLists.txt  global_misclassification.txt  launcher.sh  local_misclassification.txt  main.cpp
misclassification/data/: cr_mean_m_sigma.csv  domain_cells_data.csv  isovalues.txt
optimization/: launcher.sh
segmentation/: CMakeLists.txt  launcher.sh  launcher_groundwater.ps1  launcher_groundwater.sh  launcher_harbor.ps1  launcher_harbor.sh  launcher_sassello.ps1  launcher_sassello.sh  main.cpp
src/: auxiliary.h  contoured_mesh.cpp  contoured_mesh.h  contoured_mesh_attributes.h  criteria.h  parameters.h  read_parameters.h  read_parameters_file.h  segmented_mesh.cpp  segmented_mesh.h  segmented_mesh_attributes.h  shapefile_utils.h  statistics.h
(+19 files in other folders)
